--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+
 html, body, #root {
   height: 100%;
   width: 100%;
@@ -5,5 +7,11 @@ html, body, #root {
 }
 
 #root {
-  display: flex;  
+  display: flex;
+  font-family: 'Montserrat', sans-serif;
+  padding: 10px;
+}
+
+* {
+  box-sizing: border-box;
 }
